tests/baselines/reference/implicitAnyInAmbientDeclaration.errors.txt
==== tests/cases/compiler/implicitAnyInAmbientDeclaration.ts (5 errors) ====
    module Test {
        declare class C {
            public publicMember;  // this should be an error
            ~~~~~~~~~~~~~~~~~~~~
!!! implicitAnyInAmbientDeclaration.ts(3,9): error TS7005: Variable 'publicMember' implicitly has an 'any' type.
            private privateMember;  // this should not be an error
    
            public publicFunction(x);  // this should be an error
            ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! implicitAnyInAmbientDeclaration.ts(6,9): error TS7010: 'publicFunction', which lacks return-type annotation, implicitly has an 'any' return type.
                                  ~
!!! implicitAnyInAmbientDeclaration.ts(6,31): error TS7006: Parameter 'x' of 'publicFunction' implicitly has an 'any' type.
            private privateFunction(privateParam);  // this should not be an error
            private constructor(privateParam);
            ~~~~~~~
!!! implicitAnyInAmbientDeclaration.ts(8,9): error TS1089: 'private' modifier cannot appear on a constructor declaration.
                                ~~~~~~~~~~~~
!!! implicitAnyInAmbientDeclaration.ts(8,29): error TS7006: Parameter 'privateParam' of 'C' implicitly has an 'any' type.
        }
    }